testdata/invalid/import/cycle_a.pact
// Cyclic import - A imports B
import "./cycle_b.pact"

component ServiceA {
	id: string
}
